--- a/drawing/templates/drawing/home.html
+++ b/drawing/templates/drawing/home.html
@@ -12,10 +12,12 @@
 
 <body>
     <canvas id="canvas" width="1000" height="600"></canvas>
+    <div>Accuracy: <span id="accuracy">0</span>%</div>
 
     <script>
         var canvas = document.getElementById("canvas");
         var ctx = canvas.getContext("2d");
+        var accuracyElement = document.getElementById("accuracy");
 
         var centerX = canvas.width / 2;
         var centerY = canvas.height / 2;
@@ -25,9 +27,16 @@
         var lastY = 0;
         var painting = false;
 
+        var centralPointTimeoutSet = false;
+        var timeLimitTimeoutSet = false;
+        var timeLimitTimeout;
+
+        var points = [];
+
         canvas.addEventListener("mousedown", startPainting);
         canvas.addEventListener("mouseup", stopPainting);
         canvas.addEventListener("mousemove", draw);
+        var centralDistancePixels = 110; // Change this value to set the radius of the circle
 
         function startPainting() {
             painting = true;
@@ -37,7 +46,15 @@
             painting = false;
             lastX = 0;
             lastY = 0;
+
+            // Reset accuracy display
+            accuracyElement.textContent = 0;
+            lastAccuracy = 0;
+
+            restartGame();
         }
+
+
 
         function getMouseCoordinates(event) {
             var rect = canvas.getBoundingClientRect();
@@ -51,25 +68,24 @@
         function clearCanvas() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             drawCentralPoint();
+            points = [];
         }
 
-        var centralPointTimeoutSet = false;
-        var timeLimitTimeoutSet = false;
-        var timeLimitTimeout;
+        var timeoutID;
 
         function restartGame() {
             clearCanvas();
             lastX = 0;
             lastY = 0;
-            centralPointTimeoutSet = false;
-            timeLimitTimeoutSet = false;
-            clearTimeout(timeLimitTimeout);
-            timeLimitTimeout = setTimeout(function () {
-                alert("Time is up!");
+            painting = false;
+            clearTimeout(timeoutID);
+            timeoutID = setTimeout(function () {
+                alert("Too slow!");
                 restartGame();
             }, 5000); // 5 seconds (in milliseconds)
         }
 
+        var lastAccuracy = 0;
         function draw(event) {
             if (!painting || event.buttons !== 1) return;
 
@@ -84,35 +100,105 @@
             if (lastX === 0 && lastY === 0) {
                 ctx.moveTo(x, y);
             } else {
+                points.push({ x: x, y: y });
+
+                // Calculate and update accuracy
+                var accuracy = calculateAccuracy();
+                accuracyElement.textContent = accuracy;
+
+                // Change stroke color based on change in accuracy
+                var accuracyChange = accuracy - lastAccuracy;
+                if (accuracyChange > 0) {
+                    if (accuracyChange > 5) {
+                        ctx.strokeStyle = "green";
+                    } else if (accuracyChange > 0.3) {
+                        ctx.strokeStyle = "rgb(128,255,0)";
+                    } else if (accuracyChange > 0.2) {
+                        ctx.strokeStyle = "yellow";
+                    } else if (accuracyChange > 0.1) {
+                        ctx.strokeStyle = "orange";
+                    }
+                } else if (accuracyChange < 0) {
+                    if (accuracyChange < -0.3) {
+                        ctx.strokeStyle = "red";
+                    } else if (accuracyChange < -0.2) {
+                        ctx.strokeStyle = "rgb(255,128,0)";
+                    } else if (accuracyChange < -0.1) {
+                        ctx.strokeStyle = "yellow";
+                    } else if (accuracyChange < 0) {
+                        ctx.strokeStyle = "rgb(128,255,0)";
+                    }
+                }
+
+                // Draw line segment
+                ctx.beginPath();
+                ctx.moveTo(lastX, lastY);
                 ctx.lineTo(x, y);
                 ctx.stroke();
 
-                var centralDistance = calculateDistance(x, y, centerX, centerY);
+                var centralDistance =
+                    calculateDistance(x, y, centerX, centerY);
                 var centralDistanceCm = 1.5;
                 var pixelsToCm = 0.0264583333;
-                var centralDistancePixels = centralDistanceCm / pixelsToCm;
+                var centralDistancePixels =
+                    centralDistanceCm / pixelsToCm;
 
-                if (centralDistance < centralDistancePixels && !centralPointTimeoutSet) {
+                if (
+                    centralDistance < centralDistancePixels
+                ) {
                     centralPointTimeoutSet = true;
-                    alert("Too close to the central point!");
+                    alert("Too close to the point!");
                     restartGame();
                     return;
                 }
+
+                // Update lastAccuracy
+                lastAccuracy = accuracy;
             }
 
             lastX = x;
             lastY = y;
         }
 
+
+        function calculateAccuracy() {
+            if (points.length === 0) return 0;
+
+            var sum = 0;
+            for (var i = 0; i < points.length; i++) {
+                var distance =
+                    calculateDistance(points[i].x, points[i].y, centerX, centerY);
+                sum += Math.abs(distance - centralDistancePixels);
+            }
+            var meanDifference =
+                sum / points.length;
+
+            var accuracy =
+                Math.round(
+                    (1 - meanDifference / centralDistancePixels) *
+                    100 *
+                    100
+                ) / 100; // Round to two decimal places
+            return accuracy;
+        }
+
         function calculateDistance(x1, y1, x2, y2) {
-            var dx = x2 - x1;
-            var dy = y2 - y1;
+            var dx =
+                x2 - x1;
+            var dy =
+                y2 - y1;
             return Math.sqrt(dx * dx + dy * dy);
         }
 
         function drawCentralPoint() {
             ctx.beginPath();
-            ctx.arc(centerX, centerY, centralRadius, 0, 2 * Math.PI);
+            ctx.arc(
+                centerX,
+                centerY,
+                centralRadius,
+                0,
+                2 * Math.PI
+            );
             ctx.fillStyle = "black";
             ctx.fill();
             ctx.closePath();
